Prepare v1.15 stable branch
The main differences for the branch prep here compared to commit
4fae66689ad4 ("Prepare v1.14 stable branch") are:
- Ariane simplified some of the per-branch CI maintenance, so we don't
  need to delete all the workflows hosted in the main branch any more;
- Related, several of the conformance tests don't need to be deleted any
  more, as they can be triggered from the branch version of the workflow
- There's a few new workflows this release.
- Here I bumped the version back to the latest prerelease to simplify
  the upcoming RC preparation. This also has impacts on the Helm
  directory, which is autogenerated based on the version tag.

Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -17,9 +17,6 @@ on:
         description: "[JSON object] Arbitrary arguments passed from the trigger comment via regex capture group. Parse with 'fromJson(inputs.extra-args).argName' in workflow."
         required: false
         default: '{}'
-  # Run every 6 hours
-  schedule:
-    - cron:  '0 5/6 * * *'
 
 # By specifying the access of one of the scopes, all of those that are not
 # specified are set to 'none'.
@@ -191,7 +188,7 @@ jobs:
           echo params="--xdp --secondary-network \"\" 3 \"\" \"\" ${{ matrix.kube-proxy }} $IP_FAM" >> $GITHUB_OUTPUT
 
       - name: Provision K8s on LVH VM
-        uses: cilium/cilium/.github/actions/lvh-kind@main
+        uses: cilium/cilium/.github/actions/lvh-kind@v1.15
         with:
           test-name: e2e-conformance
           kernel: ${{ matrix.kernel }}
@@ -239,7 +236,7 @@ jobs:
             --flush-ct
 
       - name: Rotate IPsec Key & Test (${{ join(matrix.*, ', ') }})
-        uses: cilium/cilium/.github/actions/conn-disrupt-test@main
+        uses: cilium/cilium/.github/actions/conn-disrupt-test@v1.15
         with:
           job-name: conformance-ipsec-e2e-key-rotation-${{ matrix.name }}
           operation-cmd: |
