--- a/.github/workflows/push-chart-ci.yaml
+++ b/.github/workflows/push-chart-ci.yaml
@@ -18,7 +18,7 @@ on:
   # To test: uncomment this and update it to your branch name and push to the branch.
   # push:
   #   branches:
-  #     - ft/main/<your_branch>
+  #     - ft/v1.15/<your_branch>
 
 # By specifying the access of one of the scopes, all of those that are not
 # specified are set to 'none'.
