ci-e2e: Do not check for missed tail calls with host-fw
[ upstream commit 829736636f84481a6f903e5d67471decfc29793b ]

[ backporter's notes: The code was different enough that I had to
  reimplement the change. ]

It's a known flake / bug [1].

[1]: https://github.com/cilium/cilium/issues/28088

Signed-off-by: Martynas Pumputis <m@lambda.lt>
Signed-off-by: Paul Chaignon <paul.chaignon@gmail.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -304,7 +304,14 @@ jobs:
           cmd: |
             cd /host/
 
+            EXTRA=()
+            if [ "${{ matrix.host-fw }}" == "true" ]; then
+              # Until https://github.com/cilium/cilium/issues/28088 is fixed
+              EXTRA+=("--expected-drop-reasons=+Missed tail call")
+            fi
+
             ./cilium-cli connectivity test --include-unsafe-tests --collect-sysdump-on-failure \
+              "${EXTRA[@]}" \
               --sysdump-hubble-flows-count=1000000 --sysdump-hubble-flows-timeout=5m \
               --sysdump-output-filename "cilium-sysdump-${{ matrix.name }}-<ts>" \
               --junit-file "cilium-junits/${{ env.job_name }} (${{ join(matrix.*, ', ') }}).xml" \
