scale-test: Disable scraping kube-proxy
This removes need for hack in https://github.com/cilium/perf-tests/commit/761e51799a7c226f30deb2c25679cd102e8a94cd

Signed-off-by: Marcel Zieba <marcel.zieba@isovalent.com>

--- a/.github/workflows/scale-test-100-gce.yaml
+++ b/.github/workflows/scale-test-100-gce.yaml
@@ -197,6 +197,7 @@ jobs:
             --kubeconfig=$HOME/.kube/config \
             --testoverrides=./testing/overrides/load_throughput.yaml \
             --testoverrides=./testing/experiments/use_simple_latency_query.yaml \
+            --testoverrides=./testing/prometheus/not-scrape-kube-proxy.yaml \
             2>&1 | tee cl2-output.txt
 
       - name: Get sysdump
