Prepare for release v1.15.0-rc.0
Signed-off-by: Joe Stringer <joe@cilium.io>

--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -146,7 +146,7 @@ rollOutCiliumPods: false
 image:
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.15.0-pre.3"
+  tag: "v1.15.0-rc.0"
   pullPolicy: "IfNotPresent"
   # cilium-digest
   digest: ""
@@ -1224,7 +1224,7 @@ hubble:
     image:
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.15.0-pre.3"
+      tag: "v1.15.0-rc.0"
        # hubble-relay-digest
       digest: ""
       useDigest: false
@@ -2465,7 +2465,7 @@ operator:
   image:
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.15.0-pre.3"
+    tag: "v1.15.0-rc.0"
     # operator-generic-digest
     genericDigest: ""
     # operator-azure-digest
@@ -2760,7 +2760,7 @@ preflight:
   image:
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.15.0-pre.3"
+    tag: "v1.15.0-rc.0"
     # cilium-digest
     digest: ""
     useDigest: false
@@ -2922,7 +2922,7 @@ clustermesh:
     image:
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.15.0-pre.3"
+      tag: "v1.15.0-rc.0"
       # clustermesh-apiserver-digest
       digest: ""
       useDigest: false
