--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -886,6 +886,9 @@ k8sNetworkPolicy:
   # -- Enable support for K8s NetworkPolicy
   enabled: true
 
+# -- Enable endpoint lockdown on policy map overflow.
+endpointLockdownOnMapOverflow: false
+
 eni:
   # -- Enable Elastic Network Interface (ENI) integration.
   enabled: false
