--- a/contrib/testing/kind-fast.yaml
+++ b/contrib/testing/kind-fast.yaml
@@ -1,25 +1,25 @@
 extraVolumes:
-  - name: cilium-dbg-binary
-    hostPath:
-      path: /cilium-binaries/cilium-dbg
-      type: File
-  - name: cilium-agent-binary
-    hostPath:
-      path: /cilium-binaries/cilium-agent
-      type: File
-  - name: cilium-c-files
-    hostPath:
-      path: /cilium-binaries/var/lib/cilium/bpf
-      type: Directory
+- name: cilium-dbg-binary
+  hostPath:
+    path: /cilium-binaries/cilium-dbg
+    type: File
+- name: cilium-agent-binary
+  hostPath:
+    path: /cilium-binaries/cilium-agent
+    type: File
+- name: cilium-c-files
+  hostPath:
+    path: /cilium-binaries/var/lib/cilium/bpf
+    type: Directory
 extraVolumeMounts:
-  - name: cilium-dbg-binary
-    mountPath: /usr/bin/cilium-dbg
-    readOnly: true
-  - name: cilium-agent-binary
-    mountPath: /usr/bin/cilium-agent
-    readOnly: true
-  - name: cilium-c-files
-    mountPath: /var/lib/cilium/bpf
+- name: cilium-dbg-binary
+  mountPath: /usr/bin/cilium-dbg
+  readOnly: true
+- name: cilium-agent-binary
+  mountPath: /usr/bin/cilium-agent
+  readOnly: true
+- name: cilium-c-files
+  mountPath: /var/lib/cilium/bpf
 operator:
   extraVolumeMounts:
   - mountPath: /usr/bin/cilium-operator-generic
@@ -35,14 +35,19 @@ operator:
 clustermesh:
   apiserver:
     extraVolumeMounts:
+    - mountPath: /usr/bin/clustermesh-apiserver
+      name: clustermesh-apiserver-binary
+      readOnly: true
+    kvstoremesh:
+      extraVolumeMounts:
       - mountPath: /usr/bin/clustermesh-apiserver
         name: clustermesh-apiserver-binary
         readOnly: true
     extraVolumes:
-      - hostPath:
-          path: /cilium-binaries/clustermesh-apiserver
-          type: File
-        name: clustermesh-apiserver-binary
+    - hostPath:
+        path: /cilium-binaries/clustermesh-apiserver
+        type: File
+      name: clustermesh-apiserver-binary
     image:
       pullPolicy: IfNotPresent
 image:
