--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -149,8 +149,8 @@ image:
   tag: "v1.15.0-rc.0"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: ""
-  useDigest: false
+  digest: "sha256:dfd696fb4325e996098607224cf379ccdbbe969634750fa10082e7ac31d0819a"
+  useDigest: true
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -1226,8 +1226,8 @@ hubble:
       repository: "quay.io/cilium/hubble-relay"
       tag: "v1.15.0-rc.0"
        # hubble-relay-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:eb89a6c12bef00f62f393630958f58d769f0add5ba6fa914180ec21d845034ae"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -2467,14 +2467,14 @@ operator:
     repository: "quay.io/cilium/operator"
     tag: "v1.15.0-rc.0"
     # operator-generic-digest
-    genericDigest: ""
+    genericDigest: "sha256:cc0800697151d9a68c9547c66e9d5f4a67537efd369cb10caf19e79748b24b02"
     # operator-azure-digest
-    azureDigest: ""
+    azureDigest: "sha256:0f6828ab7688159e3b7bc259094af6c9643783a48b2fc0630885dcabe9249831"
     # operator-aws-digest
-    awsDigest: ""
+    awsDigest: "sha256:d28d947653bff9ad9a010bdc4bb75d3f0ce5517b601d768075f11ea32242491c"
     # operator-alibabacloud-digest
-    alibabacloudDigest: ""
-    useDigest: false
+    alibabacloudDigest: "sha256:9f34a4d32c87f7dfb7fff45c2660e58113a036dca06e75ea20b5bd46856c20fa"
+    useDigest: true
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -2762,8 +2762,8 @@ preflight:
     repository: "quay.io/cilium/cilium"
     tag: "v1.15.0-rc.0"
     # cilium-digest
-    digest: ""
-    useDigest: false
+    digest: "sha256:dfd696fb4325e996098607224cf379ccdbbe969634750fa10082e7ac31d0819a"
+    useDigest: true
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2924,8 +2924,8 @@ clustermesh:
       repository: "quay.io/cilium/clustermesh-apiserver"
       tag: "v1.15.0-rc.0"
       # clustermesh-apiserver-digest
-      digest: ""
-      useDigest: false
+      digest: "sha256:7a6be505270347b8e4076941b282ecd3c89cbdce68f50a3ba6e0bd5a60553c47"
+      useDigest: true
       pullPolicy: "IfNotPresent"
 
     etcd:
