lvh-kind: Use localhost instead of 0.0.0.0
TODO description

Signed-off-by: Martynas Pumputis <m@lambda.lt>

--- a/.github/actions/lvh-kind/action.yaml
+++ b/.github/actions/lvh-kind/action.yaml
@@ -46,3 +46,5 @@ runs:
       run: |
         mkdir ~/.kube
         scp -o StrictHostKeyChecking=no -P 2222 root@localhost:/root/.kube/config ~/.kube/config
+        sed -i 's/0\.0\.0\.0/localhost/g' ~/.kube/config
+
